# sourcemaking-design-patterns-c

./: .gitignore  README.md  build  chain-of-responsibility.c  command.c  meson.build  objectpool.c
scripts/: run.sh
